--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-    "python.pythonPath": "C:\\Users\\mkoehler1\\AppData\\Local\\Continuum\\Anaconda3\\envs\\mko\\python.exe"
+    "python.pythonPath": "C:\\Users\\mjkoehler\\Anaconda3\\envs\\mko\\python.exe"
 }
